fix: Made article links visible.

--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,11 @@ p {
   margin-top: 1em;
 }
 
+p>a,
+p>a:visited {
+  color: #905e31;
+}
+
 a,
 a:visited {
   color: #f5eddb;
